{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 1107,
  "lineage": "2e4961cf-2d5a-ca84-99a3-bbf5138cb341",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "chewbacca_nat_eip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c9344f301668aa25",
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:elastic-ip/eipalloc-0c9344f301668aa25",
            "association_id": "eipassoc-0781a18e2db3b4d4a",
            "domain": "vpc",
            "id": "eipalloc-0c9344f301668aa25",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0ce5af7a0a8ea4f22",
            "private_dns": "ip-10-17-1-250.ap-northeast-1.compute.internal",
            "private_ip": "10.17.1.250",
            "public_dns": "ec2-18-177-210-39.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.177.210.39",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "armageddon-class-vii-nat-eip01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-nat-eip01"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "chewbacca_ec201",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03d1820163e6b9f5d",
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:instance/i-0affb1fbd17cb2de4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "armageddon-class-vii-instance-profile01",
            "id": "i-0affb1fbd17cb2de4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07f76ffcca5816150"
              }
            ],
            "primary_network_interface_id": "eni-07f76ffcca5816150",
            "private_dns": "ip-10-17-1-186.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.17.1.186",
            "public_dns": "ec2-13-115-185-190.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.115.185.190",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c973ee4d62dfcc16",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07833a6433cf75668",
            "tags": {
              "Name": "armageddon-class-vii-ec201"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-ec201"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0efea5df8f14f69e0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "i-0affb1fbd17cb2de4",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.chewbacca_instance_profile01",
            "aws_iam_role.chewbacca_ec2_role01",
            "aws_secretsmanager_secret.chewbacca_db_secret01",
            "aws_security_group.chewbacca_ec2_sg01",
            "aws_subnet.chewbacca_public_subnets",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "chewbacca_ec201_private_bonus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03d1820163e6b9f5d",
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:instance/i-0c4cbbea9618d771f",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "armageddon-class-vii-instance-profile01",
            "id": "i-0c4cbbea9618d771f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08527e86413f61617"
              }
            ],
            "primary_network_interface_id": "eni-08527e86413f61617",
            "private_dns": "ip-10-17-11-240.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.17.11.240",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ad57c3bd2e17582a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d68dcef1cbbae1f8",
            "tags": {
              "Name": "armageddon-class-vii-ec201-private"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-ec201-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0efea5df8f14f69e0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "i-0c4cbbea9618d771f",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.chewbacca_instance_profile01",
            "aws_iam_role.chewbacca_ec2_role01",
            "aws_secretsmanager_secret.chewbacca_db_secret01",
            "aws_security_group.chewbacca_ec2_sg01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "chewbacca_igw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:internet-gateway/igw-08430853b026af67c",
            "id": "igw-08430853b026af67c",
            "owner_id": "420228061920",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "armageddon-class-vii-igw01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-igw01"
            },
            "vpc_id": "vpc-0052b6d75b98ac92b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "chewbacca_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "armageddon-class-vii-alb-logs-420228061920",
                "enabled": true,
                "prefix": "alb-access-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:loadbalancer/app/armageddon-class-vii-alb01/d66f7fdb0b42c207",
            "arn_suffix": "app/armageddon-class-vii-alb01/d66f7fdb0b42c207",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "armageddon-class-vii-alb01-855999183.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:loadbalancer/app/armageddon-class-vii-alb01/d66f7fdb0b42c207",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "armageddon-class-vii-alb01",
            "preserve_host_header": false,
            "region": "ap-northeast-1",
            "security_groups": [
              "sg-0033644f7d9f86563"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07833a6433cf75668"
              },
              {
                "subnet_id": "subnet-09618ab309c7972ee"
              }
            ],
            "subnets": [
              "subnet-07833a6433cf75668",
              "subnet-09618ab309c7972ee"
            ],
            "tags": {
              "Name": "armageddon-class-vii-alb01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-alb01"
            },
            "vpc_id": "vpc-0052b6d75b98ac92b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:loadbalancer/app/armageddon-class-vii-alb01/d66f7fdb0b42c207"
          },
          "dependencies": [
            "aws_s3_bucket.chewbacca_alb_logs_bucket01",
            "aws_security_group.chewbacca_alb_sg01",
            "aws_subnet.chewbacca_public_subnets",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_caller_identity.chewbacca_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "chewbacca_http_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:listener/app/armageddon-class-vii-alb01/d66f7fdb0b42c207/a6e538b8b4d22cdf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:listener/app/armageddon-class-vii-alb01/d66f7fdb0b42c207/a6e538b8b4d22cdf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:loadbalancer/app/armageddon-class-vii-alb01/d66f7fdb0b42c207",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:listener/app/armageddon-class-vii-alb01/d66f7fdb0b42c207/a6e538b8b4d22cdf"
          },
          "dependencies": [
            "aws_lb.chewbacca_alb01",
            "aws_s3_bucket.chewbacca_alb_logs_bucket01",
            "aws_security_group.chewbacca_alb_sg01",
            "aws_subnet.chewbacca_public_subnets",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_caller_identity.chewbacca_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "chewbacca_https_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:listener/app/armageddon-class-vii-alb01/d66f7fdb0b42c207/01093946e8f5a38b",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:420228061920:certificate/20c1b6c1-49d5-4260-9ff8-5221a065947a",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Access Denied: Missing Origin Shield",
                    "status_code": "403"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:listener/app/armageddon-class-vii-alb01/d66f7fdb0b42c207/01093946e8f5a38b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:loadbalancer/app/armageddon-class-vii-alb01/d66f7fdb0b42c207",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:listener/app/armageddon-class-vii-alb01/d66f7fdb0b42c207/01093946e8f5a38b"
          },
          "dependencies": [
            "aws_acm_certificate.chewbacca_acm_cert01",
            "aws_acm_certificate_validation.chewbacca_acm_validation01_dns_bonus",
            "aws_lb.chewbacca_alb01",
            "aws_route53_record.chewbacca_acm_validation_records01",
            "aws_route53_zone.chewbacca_zone01",
            "aws_s3_bucket.chewbacca_alb_logs_bucket01",
            "aws_security_group.chewbacca_alb_sg01",
            "aws_subnet.chewbacca_public_subnets",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_caller_identity.chewbacca_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "allow_cloudfront_header",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:targetgroup/armageddon-class-vii-tg01/d36961adc0511c11",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:listener-rule/app/armageddon-class-vii-alb01/d66f7fdb0b42c207/01093946e8f5a38b/e486526ea02dc011",
            "condition": [
              {
                "host_header": [],
                "http_header": [
                  {
                    "http_header_name": "X-Chewbacca-Growl",
                    "regex_values": [],
                    "values": [
                      "aqsxxii3XnqOaShUwo1ZKKZjQjlxRQcY"
                    ]
                  }
                ],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:listener-rule/app/armageddon-class-vii-alb01/d66f7fdb0b42c207/01093946e8f5a38b/e486526ea02dc011",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:listener/app/armageddon-class-vii-alb01/d66f7fdb0b42c207/01093946e8f5a38b",
            "priority": 10,
            "region": "ap-northeast-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "condition"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:listener-rule/app/armageddon-class-vii-alb01/d66f7fdb0b42c207/01093946e8f5a38b/e486526ea02dc011"
          },
          "dependencies": [
            "aws_acm_certificate.chewbacca_acm_cert01",
            "aws_acm_certificate_validation.chewbacca_acm_validation01_dns_bonus",
            "aws_lb.chewbacca_alb01",
            "aws_lb_listener.chewbacca_https_listener01",
            "aws_lb_target_group.chewbacca_tg01",
            "aws_route53_record.chewbacca_acm_validation_records01",
            "aws_route53_zone.chewbacca_zone01",
            "aws_s3_bucket.chewbacca_alb_logs_bucket01",
            "aws_security_group.chewbacca_alb_sg01",
            "aws_subnet.chewbacca_public_subnets",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_caller_identity.chewbacca_self01",
            "random_password.origin_secret"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "redirect_root_to_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "app.tritechsite.com",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:listener-rule/app/armageddon-class-vii-alb01/d66f7fdb0b42c207/01093946e8f5a38b/c2202d2798b8bd57",
            "condition": [
              {
                "host_header": [
                  {
                    "regex_values": [],
                    "values": [
                      "tritechsite.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:listener-rule/app/armageddon-class-vii-alb01/d66f7fdb0b42c207/01093946e8f5a38b/c2202d2798b8bd57",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:listener/app/armageddon-class-vii-alb01/d66f7fdb0b42c207/01093946e8f5a38b",
            "priority": 5,
            "region": "ap-northeast-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:listener-rule/app/armageddon-class-vii-alb01/d66f7fdb0b42c207/01093946e8f5a38b/c2202d2798b8bd57"
          },
          "dependencies": [
            "aws_acm_certificate.chewbacca_acm_cert01",
            "aws_acm_certificate_validation.chewbacca_acm_validation01_dns_bonus",
            "aws_lb.chewbacca_alb01",
            "aws_lb_listener.chewbacca_https_listener01",
            "aws_route53_record.chewbacca_acm_validation_records01",
            "aws_route53_zone.chewbacca_zone01",
            "aws_s3_bucket.chewbacca_alb_logs_bucket01",
            "aws_security_group.chewbacca_alb_sg01",
            "aws_subnet.chewbacca_public_subnets",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_caller_identity.chewbacca_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "chewbacca_tg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:targetgroup/armageddon-class-vii-tg01/d36961adc0511c11",
            "arn_suffix": "targetgroup/armageddon-class-vii-tg01/d36961adc0511c11",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:targetgroup/armageddon-class-vii-tg01/d36961adc0511c11",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:loadbalancer/app/armageddon-class-vii-alb01/d66f7fdb0b42c207"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "armageddon-class-vii-tg01",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "armageddon-class-vii-tg01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-tg01"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0052b6d75b98ac92b"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:targetgroup/armageddon-class-vii-tg01/d36961adc0511c11"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "chewbacca_tg_attach01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:targetgroup/armageddon-class-vii-tg01/d36961adc0511c11,i-0c4cbbea9618d771f,80",
            "port": 80,
            "region": "ap-northeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:targetgroup/armageddon-class-vii-tg01/d36961adc0511c11",
            "target_id": "i-0c4cbbea9618d771f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "port": 80,
            "region": "ap-northeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:420228061920:targetgroup/armageddon-class-vii-tg01/d36961adc0511c11",
            "target_id": "i-0c4cbbea9618d771f"
          },
          "dependencies": [
            "aws_iam_instance_profile.chewbacca_instance_profile01",
            "aws_iam_role.chewbacca_ec2_role01",
            "aws_instance.chewbacca_ec201_private_bonus",
            "aws_lb_target_group.chewbacca_tg01",
            "aws_secretsmanager_secret.chewbacca_db_secret01",
            "aws_security_group.chewbacca_ec2_sg01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "chewbacca_nat01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c9344f301668aa25",
            "association_id": "eipassoc-0781a18e2db3b4d4a",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0e6d9b22ce9cb70f2",
            "network_interface_id": "eni-0ce5af7a0a8ea4f22",
            "private_ip": "10.17.1.250",
            "public_ip": "18.177.210.39",
            "region": "ap-northeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07833a6433cf75668",
            "tags": {
              "Name": "armageddon-class-vii-nat01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-nat01"
            },
            "vpc_id": "vpc-0052b6d75b98ac92b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.chewbacca_nat_eip01",
            "aws_internet_gateway.chewbacca_igw01",
            "aws_subnet.chewbacca_public_subnets",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "chewbacca_private_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-018ff33fe84993aa61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e6d9b22ce9cb70f2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-018ff33fe84993aa6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-018ff33fe84993aa6"
          },
          "dependencies": [
            "aws_eip.chewbacca_nat_eip01",
            "aws_internet_gateway.chewbacca_igw01",
            "aws_nat_gateway.chewbacca_nat01",
            "aws_route_table.chewbacca_private_rt01",
            "aws_subnet.chewbacca_public_subnets",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "chewbacca_public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08430853b026af67c",
            "id": "r-rtb-0ba671401f7ee76701080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0ba671401f7ee7670",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0ba671401f7ee7670"
          },
          "dependencies": [
            "aws_internet_gateway.chewbacca_igw01",
            "aws_route_table.chewbacca_public_rt01",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "chewbacca_private_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:route-table/rtb-018ff33fe84993aa6",
            "id": "rtb-018ff33fe84993aa6",
            "owner_id": "420228061920",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e6d9b22ce9cb70f2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "armageddon-class-vii-private-rt01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-private-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0052b6d75b98ac92b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "rtb-018ff33fe84993aa6",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "chewbacca_public_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:route-table/rtb-0ba671401f7ee7670",
            "id": "rtb-0ba671401f7ee7670",
            "owner_id": "420228061920",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08430853b026af67c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "armageddon-class-vii-public-rt01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-public-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0052b6d75b98ac92b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "rtb-0ba671401f7ee7670",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "chewbacca_private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e75e65f9c322209",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-018ff33fe84993aa6",
            "subnet_id": "subnet-0d68dcef1cbbae1f8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.chewbacca_private_rt01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fa2d6c8363397e3",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-018ff33fe84993aa6",
            "subnet_id": "subnet-0e3bfcc6a49e3484d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.chewbacca_private_rt01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "chewbacca_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086fafbe63aa399f6",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0ba671401f7ee7670",
            "subnet_id": "subnet-07833a6433cf75668"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.chewbacca_public_rt01",
            "aws_subnet.chewbacca_public_subnets",
            "aws_vpc.chewbacca_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebef3c762e8f4ddc",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0ba671401f7ee7670",
            "subnet_id": "subnet-09618ab309c7972ee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.chewbacca_public_rt01",
            "aws_subnet.chewbacca_public_subnets",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chewbacca_alb_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:security-group/sg-0033644f7d9f86563",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ALB to talk to EC2 and respond to clients",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.17.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0033644f7d9f86563",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTPS only from CloudFront Managed Prefix List",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-58a04531"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "armageddon-class-vii-alb-sg01",
            "name_prefix": "",
            "owner_id": "420228061920",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "armageddon-class-vii-alb-sg01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-alb-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0052b6d75b98ac92b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "sg-0033644f7d9f86563",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chewbacca_ec2_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:security-group/sg-0efea5df8f14f69e0",
            "description": "EC2 app security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0efea5df8f14f69e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0033644f7d9f86563"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "armageddon-class-vii-ec2-sg01",
            "name_prefix": "",
            "owner_id": "420228061920",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "armageddon-class-vii-ec2-sg01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-ec2-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0052b6d75b98ac92b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "sg-0efea5df8f14f69e0",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chewbacca_rds_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:security-group/sg-00a0488ad8fc54267",
            "description": "RDS security group",
            "egress": [],
            "id": "sg-00a0488ad8fc54267",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL traffic",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0efea5df8f14f69e0"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "armageddon-class-vii-rds-sg01",
            "name_prefix": "",
            "owner_id": "420228061920",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "armageddon-class-vii-rds-sg01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-rds-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0052b6d75b98ac92b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "sg-00a0488ad8fc54267",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chewbacca_vpce_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:security-group/sg-002203d3c6edb56a5",
            "description": "SG for VPC Interface Endpoints",
            "egress": [],
            "id": "sg-002203d3c6edb56a5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0efea5df8f14f69e0"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "armageddon-class-vii-vpce-sg01",
            "name_prefix": "",
            "owner_id": "420228061920",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "armageddon-class-vii-vpce-sg01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-vpce-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0052b6d75b98ac92b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "sg-002203d3c6edb56a5",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_egress_to_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.17.0.0/16"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2359771765",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0033644f7d9f86563",
            "security_group_rule_id": "sgr-0c88fd1483a95b9f3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.chewbacca_alb_sg01",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2637473967",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0033644f7d9f86563",
            "security_group_rule_id": "sgr-0d367030a1ec4688d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.chewbacca_alb_sg01",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1471247418",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0033644f7d9f86563",
            "security_group_rule_id": "sgr-09fafcee8745582c3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.chewbacca_alb_sg01",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "chewbacca_ec2_ingress_from_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-4136417123",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0efea5df8f14f69e0",
            "security_group_rule_id": "sgr-06242c6d6872bb561",
            "self": false,
            "source_security_group_id": "sg-0033644f7d9f86563",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.chewbacca_alb_sg01",
            "aws_security_group.chewbacca_ec2_sg01",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "endpoint_ingress_from_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-3310497562",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-1",
            "security_group_id": "sg-002203d3c6edb56a5",
            "security_group_rule_id": "sgr-0fe6b0a70f54853a9",
            "self": false,
            "source_security_group_id": "sg-0efea5df8f14f69e0",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.chewbacca_ec2_sg01",
            "aws_security_group.chewbacca_vpce_sg01",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "chewbacca_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:subnet/subnet-0d68dcef1cbbae1f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.17.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d68dcef1cbbae1f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "420228061920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "armageddon-class-vii-private-subnet01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-private-subnet01"
            },
            "vpc_id": "vpc-0052b6d75b98ac92b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "subnet-0d68dcef1cbbae1f8",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:subnet/subnet-0e3bfcc6a49e3484d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.17.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3bfcc6a49e3484d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "420228061920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "armageddon-class-vii-private-subnet02"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-private-subnet02"
            },
            "vpc_id": "vpc-0052b6d75b98ac92b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "subnet-0e3bfcc6a49e3484d",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "chewbacca_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:subnet/subnet-07833a6433cf75668",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.17.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07833a6433cf75668",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "420228061920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "armageddon-class-vii-public-subnet01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-public-subnet01"
            },
            "vpc_id": "vpc-0052b6d75b98ac92b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "subnet-07833a6433cf75668",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:subnet/subnet-09618ab309c7972ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.17.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09618ab309c7972ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "420228061920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "armageddon-class-vii-public-subnet02"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-public-subnet02"
            },
            "vpc_id": "vpc-0052b6d75b98ac92b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "subnet-09618ab309c7972ee",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "chewbacca_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:vpc/vpc-0052b6d75b98ac92b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.17.0.0/16",
            "default_network_acl_id": "acl-03a8b3648d748e31c",
            "default_route_table_id": "rtb-075d33c2313ea8099",
            "default_security_group_id": "sg-059b70f5181d3ad0b",
            "dhcp_options_id": "dopt-0ce6a87df2fa0229b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0052b6d75b98ac92b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-075d33c2313ea8099",
            "owner_id": "420228061920",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "armageddon-class-vii-vpc01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-vpc01"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "vpc-0052b6d75b98ac92b",
            "region": "ap-northeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "chewbacca_vpce_ec2messages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:vpc-endpoint/vpce-01771bb2c8c6725fd",
            "dns_entry": [
              {
                "dns_name": "vpce-01771bb2c8c6725fd-2szuek7r.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-01771bb2c8c6725fd-2szuek7r-ap-northeast-1c.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-01771bb2c8c6725fd-2szuek7r-ap-northeast-1a.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ec2messages.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z0941991YWH63KL2CRCP"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01771bb2c8c6725fd",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06291c127a545010f",
              "eni-085f1e85bf0185d61"
            ],
            "owner_id": "420228061920",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-002203d3c6edb56a5"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ec2messages",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.17.11.63",
                "subnet_id": "subnet-0d68dcef1cbbae1f8"
              },
              {
                "ipv4": "10.17.12.106",
                "subnet_id": "subnet-0e3bfcc6a49e3484d"
              }
            ],
            "subnet_ids": [
              "subnet-0d68dcef1cbbae1f8",
              "subnet-0e3bfcc6a49e3484d"
            ],
            "tags": {
              "Name": "armageddon-class-vii-vpce-ec2messages01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-vpce-ec2messages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0052b6d75b98ac92b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "vpce-01771bb2c8c6725fd",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.chewbacca_vpce_sg01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_region.chewbacca_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "chewbacca_vpce_kms01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:vpc-endpoint/vpce-00de65482c1ed4938",
            "dns_entry": [
              {
                "dns_name": "vpce-00de65482c1ed4938-pmtt5sfh.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-00de65482c1ed4938-pmtt5sfh-ap-northeast-1c.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-00de65482c1ed4938-pmtt5sfh-ap-northeast-1a.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "kms.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z09352662HDQLUSIJWFFU"
              },
              {
                "dns_name": "kms.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z09345881QOOVQRO0RIM4"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00de65482c1ed4938",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0851334343540dbd8",
              "eni-0e411c84828cb98f7"
            ],
            "owner_id": "420228061920",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-002203d3c6edb56a5"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.kms",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.17.11.172",
                "subnet_id": "subnet-0d68dcef1cbbae1f8"
              },
              {
                "ipv4": "10.17.12.4",
                "subnet_id": "subnet-0e3bfcc6a49e3484d"
              }
            ],
            "subnet_ids": [
              "subnet-0d68dcef1cbbae1f8",
              "subnet-0e3bfcc6a49e3484d"
            ],
            "tags": {
              "Name": "armageddon-class-vii-vpce-kms01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-vpce-kms01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0052b6d75b98ac92b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "vpce-00de65482c1ed4938",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.chewbacca_vpce_sg01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_region.chewbacca_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "chewbacca_vpce_logs01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:vpc-endpoint/vpce-064412733e9c4598c",
            "dns_entry": [
              {
                "dns_name": "vpce-064412733e9c4598c-ashd10qo.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-064412733e9c4598c-ashd10qo-ap-northeast-1a.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-064412733e9c4598c-ashd10qo-ap-northeast-1c.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "logs.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z027917739PTV1WC3DWZ8"
              },
              {
                "dns_name": "logs.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z093688629X0E23RF3HAG"
              },
              {
                "dns_name": "streaming-logs.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z0937418VC2BU6FVS1WD"
              },
              {
                "dns_name": "streaming-logs.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z09350893QTD27ZI3BHEC"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-064412733e9c4598c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04fd0e6c5328bb382",
              "eni-0bc8767eb2428490a"
            ],
            "owner_id": "420228061920",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-002203d3c6edb56a5"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.logs",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.17.11.126",
                "subnet_id": "subnet-0d68dcef1cbbae1f8"
              },
              {
                "ipv4": "10.17.12.92",
                "subnet_id": "subnet-0e3bfcc6a49e3484d"
              }
            ],
            "subnet_ids": [
              "subnet-0d68dcef1cbbae1f8",
              "subnet-0e3bfcc6a49e3484d"
            ],
            "tags": {
              "Name": "armageddon-class-vii-vpce-logs01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-vpce-logs01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0052b6d75b98ac92b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "vpce-064412733e9c4598c",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.chewbacca_vpce_sg01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_region.chewbacca_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "chewbacca_vpce_s3_gw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:vpc-endpoint/vpce-061fadedd182e7367",
            "cidr_blocks": [
              "3.5.152.0/21",
              "52.219.162.0/23",
              "52.219.0.0/20",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.172.0/22",
              "52.219.20.0/23",
              "52.219.195.0/24",
              "52.219.200.0/23",
              "52.219.150.0/23",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.68.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-061fadedd182e7367",
            "ip_address_type": "ipv4",
            "owner_id": "420228061920",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-018ff33fe84993aa6"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "service_region": "ap-northeast-1",
            "state": "available",
            "tags": {
              "Name": "armageddon-class-vii-vpce-s3-gw01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-vpce-s3-gw01"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0052b6d75b98ac92b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "vpce-061fadedd182e7367",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_route_table.chewbacca_private_rt01",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_region.chewbacca_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "chewbacca_vpce_secrets01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:vpc-endpoint/vpce-0260c818828c60059",
            "dns_entry": [
              {
                "dns_name": "vpce-0260c818828c60059-kvkbwrcp.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0260c818828c60059-kvkbwrcp-ap-northeast-1a.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0260c818828c60059-kvkbwrcp-ap-northeast-1c.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "secretsmanager.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z093422629UYYRNEXG81E"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0260c818828c60059",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0924ea4a5916a56fb",
              "eni-09459e2ea4895752b"
            ],
            "owner_id": "420228061920",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-002203d3c6edb56a5"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.secretsmanager",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.17.11.225",
                "subnet_id": "subnet-0d68dcef1cbbae1f8"
              },
              {
                "ipv4": "10.17.12.126",
                "subnet_id": "subnet-0e3bfcc6a49e3484d"
              }
            ],
            "subnet_ids": [
              "subnet-0d68dcef1cbbae1f8",
              "subnet-0e3bfcc6a49e3484d"
            ],
            "tags": {
              "Name": "armageddon-class-vii-vpce-secrets01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-vpce-secrets01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0052b6d75b98ac92b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "vpce-0260c818828c60059",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.chewbacca_vpce_sg01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_region.chewbacca_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "chewbacca_vpce_ssm01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:vpc-endpoint/vpce-0f563cff261bdaa9b",
            "dns_entry": [
              {
                "dns_name": "vpce-0f563cff261bdaa9b-gadmff5j.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0f563cff261bdaa9b-gadmff5j-ap-northeast-1c.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0f563cff261bdaa9b-gadmff5j-ap-northeast-1a.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssm.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z09346721U303C7RHU8QQ"
              },
              {
                "dns_name": "ssm.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z0515553DAMX0B91M95O"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f563cff261bdaa9b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-044d4b2d65099f1da",
              "eni-09bc6dd638b219783"
            ],
            "owner_id": "420228061920",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-002203d3c6edb56a5"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssm",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.17.11.218",
                "subnet_id": "subnet-0d68dcef1cbbae1f8"
              },
              {
                "ipv4": "10.17.12.145",
                "subnet_id": "subnet-0e3bfcc6a49e3484d"
              }
            ],
            "subnet_ids": [
              "subnet-0d68dcef1cbbae1f8",
              "subnet-0e3bfcc6a49e3484d"
            ],
            "tags": {
              "Name": "armageddon-class-vii-vpce-ssm01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-vpce-ssm01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0052b6d75b98ac92b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "vpce-0f563cff261bdaa9b",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.chewbacca_vpce_sg01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_region.chewbacca_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "chewbacca_vpce_ssmmessages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:vpc-endpoint/vpce-0209961d327096f29",
            "dns_entry": [
              {
                "dns_name": "vpce-0209961d327096f29-w1l1lfvj.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0209961d327096f29-w1l1lfvj-ap-northeast-1a.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0209961d327096f29-w1l1lfvj-ap-northeast-1c.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z09354793T0LQ9QFGV8JZ"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z0941977YR0BLBPQB5JR"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0209961d327096f29",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0634dfe0bafce34db",
              "eni-06c8e708548f636c7"
            ],
            "owner_id": "420228061920",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-002203d3c6edb56a5"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssmmessages",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.17.11.22",
                "subnet_id": "subnet-0d68dcef1cbbae1f8"
              },
              {
                "ipv4": "10.17.12.205",
                "subnet_id": "subnet-0e3bfcc6a49e3484d"
              }
            ],
            "subnet_ids": [
              "subnet-0d68dcef1cbbae1f8",
              "subnet-0e3bfcc6a49e3484d"
            ],
            "tags": {
              "Name": "armageddon-class-vii-vpce-ssmmessages01"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-vpce-ssmmessages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0052b6d75b98ac92b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "vpce-0209961d327096f29",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.chewbacca_vpce_sg01",
            "aws_subnet.chewbacca_private_subnets",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_region.chewbacca_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:security-group-rule/sgr-046cacee24837a242",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow ALB to talk to EC2 and respond to clients",
            "from_port": null,
            "id": "sgr-046cacee24837a242",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0033644f7d9f86563",
            "security_group_rule_id": "sgr-046cacee24837a242",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "sgr-046cacee24837a242",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.chewbacca_alb_sg01",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ec2_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:security-group-rule/sgr-078b96daaad9d871a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-078b96daaad9d871a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0efea5df8f14f69e0",
            "security_group_rule_id": "sgr-078b96daaad9d871a",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "sgr-078b96daaad9d871a",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.chewbacca_ec2_sg01",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_allow_cloudfront_only",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:security-group-rule/sgr-095bf07e0195078b5",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow HTTPS only from CloudFront Managed Prefix List",
            "from_port": 443,
            "id": "sgr-095bf07e0195078b5",
            "ip_protocol": "tcp",
            "prefix_list_id": "pl-58a04531",
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0033644f7d9f86563",
            "security_group_rule_id": "sgr-095bf07e0195078b5",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "sgr-095bf07e0195078b5",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.chewbacca_alb_sg01",
            "aws_vpc.chewbacca_vpc01",
            "data.aws_ec2_managed_prefix_list.cloudfront_origin_facing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:security-group-rule/sgr-00ae55a4a48e22333",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTP traffic",
            "from_port": 80,
            "id": "sgr-00ae55a4a48e22333",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0efea5df8f14f69e0",
            "security_group_rule_id": "sgr-00ae55a4a48e22333",
            "tags": {
              "Name": "armageddon-class-vii-http"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-http"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "sgr-00ae55a4a48e22333",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.chewbacca_ec2_sg01",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:420228061920:security-group-rule/sgr-01d886648e55224cf",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow MySQL traffic",
            "from_port": 3306,
            "id": "sgr-01d886648e55224cf",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0efea5df8f14f69e0",
            "region": "ap-northeast-1",
            "security_group_id": "sg-00a0488ad8fc54267",
            "security_group_rule_id": "sgr-01d886648e55224cf",
            "tags": {
              "Name": "armageddon-class-vii-mysql"
            },
            "tags_all": {
              "Name": "armageddon-class-vii-mysql"
            },
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "420228061920",
            "id": "sgr-01d886648e55224cf",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.chewbacca_ec2_sg01",
            "aws_security_group.chewbacca_rds_sg01",
            "aws_vpc.chewbacca_vpc01"
          ]
        }
      ]
    }
  ]
}